--- a/src/login.css
+++ b/src/login.css
@@ -6,3 +6,174 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    height: 100vh;
+    background: url(/img/bg-img/bg-login.jpg) no-repeat center center fixed;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-box {
+    width: 529px;
+    height: 663px;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 37px;
+    background-color: #181A1CD6;
+    border-radius: 16px;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 37px;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    color: var(--text-light-primary);
+    cursor: default;
+}
+
+.title h3 {
+    line-height: 32.2px;
+}
+
+.title p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22.4px;
+    letter-spacing: 0.2px;
+}
+
+fieldset {
+    border: none;
+    display: flex;
+    flex-direction: column;
+    gap: 37px;
+}
+
+.label-box {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    color: var(--text-light-primary);
+}
+
+.label-box label {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 25.2px;
+    letter-spacing: 0.2px;
+}
+
+.input {
+    height: 50px;
+    border-radius: 24px;
+    border: 1px solid var(--outline-border);
+    padding: 14px 20px;
+    background-color: transparent;
+    color: var(--text-light-secondary);
+}
+
+.input::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22.4px;
+    letter-spacing: 0.2px;
+}
+
+.label-box:nth-of-type(2) {
+    position: relative;
+}
+
+.visibility-icon {
+    background: none;
+    border: none;
+    width: fit-content;
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 47px;
+}
+
+.visibility-icon img {
+    width: 20px;
+    height: 20px;
+
+}
+
+.links {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 12px;
+}
+
+.links p {
+    color: var(--text-light-secondary);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19.6px;
+    letter-spacing: 0.2px;
+}
+
+.links a {
+    text-decoration: none;
+    color: var(--text-light-primary);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22.4px;
+    letter-spacing: 0.2px;
+}
+
+.button-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-top: 37px;
+}
+
+.buttons {
+    width: 100%;
+    height: 50px;
+    border-radius: 24px;
+    border: 1px solid var(--outline-border);
+    background-color: transparent;
+    color: var(--text-light-primary);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22.4px;
+    letter-spacing: 0.2px;
+}
+
+.buttons:hover {
+    background-color: rgba(61, 65, 66, 1);
+    cursor: pointer;
+}
+
+.button-box:nth-of-type(2) {
+    color: var(--text-light-disabled);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 19.6px;
+    letter-spacing: 0.2px;
+}
+
+.buttons:last-of-type {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
