--- a/src/register.css
+++ b/src/register.css
@@ -6,3 +6,300 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    height: 100vh;
+    background: url(/img/bg-img/bg-register.jpg) no-repeat center center fixed;
+    background-size: cover;
+    filter: var(--greyscale-900);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.register-box {
+    width: 429px;
+    height: 600px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    background-color: #181A1CD6;
+    border-radius: 16px;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.logo {
+    width: 163px;
+    height: 44px;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    color: var(--text-light-primary);
+    cursor: default;
+}
+
+.title h3 {
+    line-height: 32.2px;
+}
+
+.title p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22.4px;
+    letter-spacing: 0.2px;
+}
+
+fieldset {
+    border: none;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.label-box {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    color: var(--text-light-primary);
+}
+
+.label-box label {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 25.2px;
+    letter-spacing: 0.2px;
+}
+
+.input {
+    height: 40px;
+    border-radius: 24px;
+    border: 1px solid var(--input-border);
+    padding: 14px 20px;
+    background-color: transparent;
+    color: var(--text-light-secondary);
+}
+
+.input:focus {
+    outline: 1px solid var(--outline-border);
+}
+
+.input::placeholder {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22.4px;
+    letter-spacing: 0.2px;
+}
+
+.relative {
+    position: relative;
+}
+
+.visibility-icon {
+    background: none;
+    border: none;
+    width: fit-content;
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 39px;
+}
+
+.visibility-icon img {
+    width: 20px;
+    height: 20px;
+}
+
+.links {
+    margin-top: 4px;
+}
+
+.links p {
+    color: var(--text-light-secondary);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 19.6px;
+    letter-spacing: 0.2px;
+}
+
+.links a {
+    text-decoration: none;
+    color: var(--text-light-primary);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22.4px;
+    letter-spacing: 0.2px;
+}
+
+.button-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-top: 20px;
+}
+
+.buttons {
+    width: 100%;
+    height: 40px;
+    border-radius: 24px;
+    border: 1px solid var(--outline-border);
+    background-color: transparent;
+    color: var(--text-light-primary);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22.4px;
+    letter-spacing: 0.2px;
+}
+
+.buttons:hover {
+    background-color: rgba(61, 65, 66, 1);
+    cursor: pointer;
+}
+
+.button-box:nth-of-type(2) {
+    color: var(--text-light-disabled);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 19.6px;
+    letter-spacing: 0.2px;
+}
+
+.buttons:last-of-type {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.google-icon {
+    width: 18px;
+    height: 18px;
+}
+
+/* RESPONSIVE MEDIA QUERY */
+
+/* mobile-phone */
+@media only screen and (max-width: 600px) {
+    .register-box {
+        width: 306px;
+        height: 430px;
+        gap: 10px;
+    }
+
+    header {
+        gap: 10px;    
+    }
+
+    .logo {
+        width: 94px;
+        height: 24px;
+    }
+    
+    .title {
+        gap: 2px;
+        color: var(--text-light-primary);
+        cursor: default;
+    }
+    
+    .title h3 {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 25.2px;
+    }
+    
+    .title p {
+        font-weight: 400;
+        font-size: 10px;
+        line-height: 14px;
+    }
+    
+    fieldset {
+        gap: 10px;
+    }
+    
+    .label-box label {
+        font-size: 12px;
+        line-height: 14px;
+    }
+    
+    .input {
+        height: 28px;
+        padding: 4px 11.55px 8px;
+        border-radius: 12px;
+    }
+    
+    .input::placeholder {
+        font-size: 10px;
+        line-height: 12.9px;
+        letter-spacing: 0.12px;
+    }
+    
+    .visibility-icon {
+        right: 11.55px;
+        top: 25px;
+    }
+    
+    .visibility-icon img {
+        width: 12px;
+        height: 12px;
+    
+    }
+    
+    .links {
+        margin-top: 7px;
+    }
+    
+    .links p {
+        font-size: 10px;
+        line-height: 14px;
+    }
+    
+    .links a {
+        font-weight: 500;
+        font-size: 10px;
+        line-height: 14px;
+    }
+    
+    .button-box {
+        gap: 4px;
+        margin-top: 20px;
+    }
+    
+    .buttons {
+        width: 100%;
+        height: 30px;
+        border-radius: 14px;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 14px;
+    }
+    
+    .button-box:nth-of-type(2) {
+        font-size: 10px;
+        line-height: 14px;
+    }
+    
+    .buttons:last-of-type {
+        gap: 5px;
+    }
+
+    .google-icon {
+        width: 13px;
+        height: 13px;
+    }
+}
