--- a/src/register.css
+++ b/src/register.css
@@ -17,6 +17,17 @@ body {
     align-items: center;
 }
 
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+}
+
 .register-box {
     width: 429px;
     height: 600px;
@@ -130,7 +141,7 @@ fieldset {
 .links p {
     color: var(--text-light-secondary);
     font-weight: 400;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 19.6px;
     letter-spacing: 0.2px;
 }
